# safeheron-crypto-suites-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
example/crypto-ecies/examples/: CMakeLists.txt  example.cpp
example/crypto-paillier/examples/: CMakeLists.txt
src/crypto-bip32-cpp/src/: CMakeLists.txt
src/crypto-bip32-cpp/src/crypto-bip32/: bip32.cpp  bip32.h  bip32_ecdsa.cpp  bip32_ecdsa.h  bip32_ed25519.cpp  bip32_ed25519.h  common.h  util.h
src/crypto-bip32-cpp/test/: CMakeLists.txt  bip32-boundary-test.cpp  bip32-ed25519-CreateHDKey-test.cpp  bip32-ed25519-private-CKD-test.cpp  bip32-ed25519-public-CKD-test.cpp  bip32-hd-path-test.cpp  bip32-secp256k1-CreateHDKey-test.cpp  bip32-secp256k1-private-CKD-test.cpp  bip32-secp256k1-public-CKD-test.cpp  bip32-secp256k1-serialization-test.cpp  priv_derivation.txt  priv_derivation_js.txt  pub_derivation_js.txt
src/crypto-bip39-cpp/src/: CMakeLists.txt
src/crypto-bip39-cpp/src/crypto-bip39/: bip39.cpp  hash_wrapper.cpp  hash_wrapper.h  memzero.c  wally_bip39.h  wally_mnemonic.c  wordlist.c  wordlist.h
src/crypto-bip39-cpp/test/: CMakeLists.txt  bip39-16bytes-test.cpp  bip39-20bytes-test.cpp  bip39-24bytes-test.cpp  bip39-internal-test.cpp  ventropy_16.h  ventropy_20.h  ventropy_24.h  ventropy_28.h  vmnemonic_en_12.h  vmnemonic_en_15.h  vmnemonic_en_18.h  vmnemonic_en_21.h  vmnemonic_en_24.h  vmnemonic_zhs_18.h  vmnemonic_zhs_24.h  vmnemonic_zht_12.h  vmnemonic_zht_18.h
src/crypto-bn-cpp/examples/: CMakeLists.txt  example.cpp
src/crypto-bn-cpp/src/: CMakeLists.txt
src/crypto-bn-cpp/src/crypto-bn/: rand.cpp
src/crypto-bn-cpp/src/exception/: located_exception.h  safeheron_exceptions.h
src/crypto-bn-cpp/test/: CMakeLists.txt  bn-auxiliary-test.cpp  bn-bit-operation-test.cpp  bn-bytes-conversion-test.cpp  bn-jacobi-test.cpp  rnd-test.cpp
src/crypto-commitment-cpp/test/: CMakeLists.txt  commitment-test.cpp
src/crypto-curve-cpp/examples/: CMakeLists.txt
src/crypto-curve-cpp/src/: CMakeLists.txt
src/crypto-curve-cpp/src/crypto-curve/: curve.cpp  curve.h  curve_point.cpp  curve_point.h  curve_type.h  (+7 more)
src/crypto-curve-cpp/test/: CMakeLists.txt  arithmetic-operation-test.cpp  comparison-test.cpp  constructor-test.cpp  ecdsa-test.cpp  eddsa-test.cpp  encode-bytes-test.cpp  infinity-element-test.cpp  serialization-base64-test.cpp  serialization-json-test.cpp  stark-consistency-test.cpp
src/crypto-ecies-cpp/: CMakeLists.txt  README.md
src/crypto-ecies-cpp/cmake/: CryptoECIESConfig.cmake.in  setup_installation.cmake
src/crypto-ecies-cpp/src/: CMakeLists.txt
src/crypto-ecies-cpp/test/: CMakeLists.txt  auth-enc-test.cpp  curve-param-test.cpp  ecies-test.cpp
src/crypto-encode-cpp/examples/: CMakeLists.txt  example.cpp
src/crypto-encode-cpp/src/: CMakeLists.txt
test/: CMakeLists.txt
test/crypto-aes/: CMakeLists.txt  aes-gcm-identical-test.cpp  aes-gcm-test.cpp
test/crypto-bip32/: CMakeLists.txt  bip32-boundary-test.cpp  bip32-ed25519-CreateHDKey-test.cpp  bip32-ed25519-WithJs-test.cpp  bip32-ed25519-private-CKD-test.cpp  bip32-ed25519-public-CKD-test.cpp  bip32-ed25519-serialization-test.cpp  bip32-hd-path-test.cpp  bip32-secp256k1-CreateHDKey-test.cpp  bip32-secp256k1-official-test.cpp  bip32-secp256k1-private-CKD-test.cpp  bip32-secp256k1-public-CKD-test.cpp  bip32-secp256k1-serialization-test.cpp  bip32-verification-test.cpp  generate-data-test.cpp  priv_derivation_java.txt  pub_derivation.txt  pub_derivation_java.txt
test/crypto-bip39/: CMakeLists.txt  bip39-16bytes-test.cpp  bip39-20bytes-test.cpp  bip39-24bytes-test.cpp  bip39-28bytes-test.cpp  bip39-32bytes-test.cpp  bip39-internal-test.cpp  bip39-official-test.cpp  bip39-test.cpp  official_test_data.h  ventropy_32.h  vmnemonic_zhs_12.h  vmnemonic_zhs_15.h  vmnemonic_zhs_21.h  vmnemonic_zht_15.h  vmnemonic_zht_21.h  vmnemonic_zht_24.h
test/crypto-bn/: CMakeLists.txt  bn-arithmetic-operation-test.cpp  bn-assignment-test.cpp  bn-auxiliary-test.cpp  bn-bit-operation-test.cpp  bn-bytes-conversion-test.cpp  bn-comparison-test.cpp  bn-constructor-test.cpp  bn-jacobi-test.cpp  bn-number-theory-func-test.cpp  bn-sqrt-test.cpp  bn-string-conversion-test.cpp  rnd-test.cpp
test/crypto-commitment/: CMakeLists.txt  commitment-test.cpp
test/crypto-curve/: CMakeLists.txt  arithmetic-operation-test.cpp  comparison-test.cpp  constructor-test.cpp  ecdsa-test.cpp  eddsa-test.cpp  encode-bytes-test.cpp  infinity-element-test.cpp  schnorr-bip340-test.cpp  schnorr-legacy-test.cpp  serialization-base64-test.cpp  serialization-json-test.cpp  stark-consistency-test.cpp
test/crypto-ecies/: CMakeLists.txt  auth-enc-test.cpp  curve-param-test.cpp  ecies-test.cpp
test/crypto-encode/: CMakeLists.txt  base58-test.cpp  base64-test.cpp  hex-test.cpp
test/crypto-hash/: CMakeLists.txt  hash-test.cpp  hmac-sha512-test.cpp  keccak256-test.cpp  safe-hash256-test.cpp  safe-hash512-test.cpp  sha256-test.cpp  sha512-test.cpp  shake128-test.cpp  shake128_vectors_pretty.h  shake256-test.cpp  shake256_vectors_pretty.h  util-test.h
test/crypto-paillier/: CMakeLists.txt  paillier-test.cpp
test/crypto-sss/: CMakeLists.txt  sss-test.cpp
test/crypto-zkp/: CMakeLists.txt  dln_proof_test.cpp  dlog_elgamal_com_proof_test.cpp  dlog_equality_proof_test.cpp  dlog_proof_test.cpp  dlog_proof_v2_test.cpp  dlog_proof_v3_test.cpp  heg_proof_test.cpp  heg_proof_v2_test.cpp  heg_proof_v3_test.cpp  linear_combination_proof_test.cpp  no_small_factor_proof_test.cpp  pail_N_test.cpp  pail_aff_group_ele_range_proof_v1_test.cpp  pail_aff_group_ele_range_proof_v2_test.cpp  pail_aff_range_proof_test.cpp  pail_blum_modulus_proof_test.cpp  pail_dec_modulo_proof_test.cpp  pail_enc_elgamal_com_range_proof_test.cpp  pail_enc_group_ele_range_proof_test.cpp  pail_enc_mul_proof_test.cpp  pail_enc_range_proof_v1_test.cpp  pail_enc_range_proof_v2_test.cpp  pail_enc_range_proof_v3_test.cpp  pail_mul_group_ele_range_proof_test.cpp  pail_test.cpp  pdl_proof_test.cpp  pedersen_proof_test.cpp  range_proof_test.cpp  two_dln_proof_test.cpp  zkp-test.cpp
test/utils/: HexUtil.h
(+459 files in other folders)
